Update submit and register endpoints.
